# ISA-Team-8

./: .gitignore  EDA_basic.ipynb  EDA_restaurant.ipynb  EDA_restaurant_2.ipynb  README.md  categories_scraping.ipynb  create_review_for_vis.ipynb  create_review_no_text.ipynb  create_user_for_vis.ipynb  create_user_no_friends.ipynb  credentials.ini  docker-compose.yml  filter_review.sh  filter_user.sh  hybrid_recommender.ipynb  lstm.ipynb  pyproject.toml
.ipynb_checkpoints/: hybrid_recommender-checkpoint.ipynb
custom_data/: yelp_categories.json
original_data/: Out_43.csv
original_data/yelp_json/: yelp_categories.html
server-code/: app-local.py
web-demo/: README.md
web-demo/backend/: Dockerfile  main.py  requirements.txt
web-demo/frontend/: app.js  index.html  styles.css
web-demo/scripts/: build_demo_artifacts.py  patch_notebooks_for_export.py
