[project]
name = "isa-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "xmltojson>=2.0.3",
]
