[project]
name = "isa-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "keras>=3.14.0",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "surprise>=0.1",
    "tensorflow>=2.21.0",
    "xmltojson>=2.0.3",
]
